tests/architecture/fixtures/fail/src/dialogos/domain/bad.py
from __future__ import annotations

from dialogos.application.bad import build_sender


def make_sender() -> object:
    return build_sender()
